# claude-sessions

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  release.yml  rust-app.yml
docs/: ROADMAP.md  rust-rewrite.md  signing.md  terminals.md
session-status/: .gitignore  README.md  status
session-status/app/: Cargo.toml  tauri.conf.json
session-status/app/capabilities/: default.json
session-status/app/src/: gui.rs  install.rs  main.rs  model.rs  paths.rs  platform.rs  recorder.rs  selfinstall.rs  styles.rs  tray.rs
session-status/app/src/terminals/: jetbrains.rs  macos_terminal.rs  mod.rs  tabmatch.rs  wezterm.rs  wt.rs
session-status/app/ui/: index.html  menu.html
session-status/recorder/: Cargo.toml
session-status/recorder/src/: lib.rs
session-status/win/: .gitignore  README.md  install.py  status.ps1
session-status/win/ClaudeSessions/: ClaudeSessions.csproj  Interop.cs  MainWindow.cs  Program.cs  RenameDialog.cs  Row.cs  Startup.cs  StateReader.cs  Styles.cs  Tray.cs  WpfTrayMenu.cs  WtTabs.cs  app.manifest
src/main/kotlin/com/nije/claudesessions/: ClaudeLauncher.kt  FocusWatcher.kt  NewClaudeSessionAction.kt  SessionsToolWindowFactory.kt  StateReader.kt  TabNamePublisher.kt  TabNamer.kt  TerminalJump.kt
worklog/: worklog_capture.py
