[package]
name = "claude-sessions"
version = "0.3.0"
edition = "2021"
description = "Claude Code session-status widget + hook recorder — one cross-platform binary (GUI, recorder, installer)"
license = "AGPL-3.0"

[[bin]]
name = "claude-sessions"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
serde = "1"
serde_json = "1"
# macos-private-api gates the mac transparent-window support; it is a no-op on Windows.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
# Cross-platform global hotkeys (jump-to-top / new-session) — the Carbon RegisterEventHotKey
# analog from menubar.swift, rebindable from the options pane.
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
# Same 0.61 the tauri tree already compiles; used for UI Automation (WT per-tab focus).
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
