[package]
name = "session-status"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Claude session-status recorder + dashboard (replaces record.py / dashboard.py)"
publish = false

# Two binaries, auto-detected from src/bin/, sharing the small library in src/lib.rs:
#   record     <- replaces bin/record.py   (invoked by Claude Code hooks; hot path)
#   dashboard  <- replaces bin/dashboard.py (terminal TUI, `status dash`)

[dependencies]
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
